--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 title: prueba de concepto
-theme: jekyll-theme-minimal
+#theme: jekyll-theme-minimal
+remote_theme: pages-themes/hacker@v0.2.0
+plugins:
+- jekyll-remote-theme #
 description: probando... que es gerundio
